# sozialindex_nrw

./: .gitignore  README.md  config.toml  pyproject.toml  streamlit_app.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
data/: sozialindex.duckdb
scripts/: import_socialindex_csv.py
src/sozialindex_dashboard/: __init__.py  app.py  config.py  db.py  extract_csv.py  extract_pdf.py  geo.py  geolocation.py
tests/: test_db_queries.py  test_extract_csv.py  test_extract_pdf.py
