[project]
name = "sozialindex-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Tobias Bell", email = "github@tobiasbell.de" }
]
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.3",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.9",
    "pydeck>=0.9.2",
    "pyproj>=3.7.2",
    "streamlit>=1.58.0",
]

[project.scripts]
sozialindex-dashboard = "sozialindex_dashboard:main"

[build-system]
requires = ["uv_build>=0.11.19,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.16",
    "watchdog>=6.0.0",
]
